Petalinux_BSP/TySOM-3A-ZU19EG/2021.2/README.md
# Build root filesystem and Linux kernel with using Petalinux 2021.2 for [TySOM-3A-ZU19EG](https://www.aldec.com/en/products/emulation/tysom_boards/zynq_ultrascale_mpsoc/tysom_3a_zu19eg) board

## Table of Content
- [Provided files](#provided_files)
- [Requirements](#requirements)
- [Petalinux 2021.2 instruction](#petalinux_instruction)
	- [Known issues](#known_issues)
- [Update the hardware platform in the Petalinux project](#update_hardware)
- [Test PetaLinux with QEMU](#test_petalinux)
	- [Notes](#test_petalinux_notes)

## Provided files <a name="provided_files"/>

## Requirements <a name="requirements"/>

Hardware: 
- TySOM-3A-ZU19EG

Software:
- Petalinux 2021.2

## Petalinux 2021.2 instruction <a name="petalinux_instruction"/>
Run below steps to recreate a Linux kernel and a Petalinux filesystem.

1. Source a Petalinux configuration file

```
source <petalinux_installation_path>/petalinux-2021.2/settings.sh
```

2. Create a project with using the BSP.

```
petalinux-create -t project -s <path>/TySOM-3A-ZU19EG.bsp
```

3. Go to the project directory

```
cd ./TySOM-3A-ZU19EG
```

4. If any changes in the Linux kernel configuration are required then run the command:

```
petalinux-config -c kernel
```

5. If any changes in the root filesystem configuration are required then run the command:

```
petalinux-config -c rootfs
```

6. Build the project

```
petalinux-build
```

7. If the building process is successfully finished then created files should be placed at directory ./images/linux.
Find files Image and rootfs.cpio.gz.u-boot.

8. Generate the BOOT.BIN file

```
petalinux-package --boot --force --fpga --u-boot
```

9. Copy files to a micro SD card.
The micro SD card should contain the following set of files:
- BOOT.BIN (images/linux/BOOT.BIN)
- boot.scr (images/linux/boot.scr)
- system.dtb (images/linux/system.dtb)
- Image (images/linux/Image)
- rootfs.cpio.gz.u-boot (images/linux/rootfs.cpio.gz.u-boot)
- uEnv.txt (pre-built/linux/images/uEnv.txt; optional - can be used for bootargs modifications)

For root file systems located on second partition copy the following set of files to boot partition:
- BOOT.BIN (images/linux/BOOT.BIN)
- boot.scr (images/linux/boot.scr)
- system.dtb (images/linux/system.dtb)
- Image (images/linux/Image)
- uEnv.txt (pre-built/linux/images/uEnv.txt)

Above files are also available in the pre-built directory (included in the BSP).

### Known issues: <a name="known_issues"/>
- None

## Update the hardware platform in the Petalinux project <a name="update_hardware"/>

If a user modified the reference Vivado design then it is possible to update a hardware platform for Petalinux project. When the PetaLinux project is created then update the hardware platform and rebuild the project. Follow below steps:

1. Export a hardware platform from Vivado design.

In Vivado 2021.2 tool: File -> Export -> Export Hardware -> Next -> Include bitstream -> Select a name and a directory -> Finish
A new XSA file will be created.

2. Copy a new XSA to the PetaLinux project directory

3. Load the new XSA to the project and configure autogeneration options in menu

```
petalinux-config --get-hw-description=./
```

4. Save and exit the configuration menu. Build the project

```
petalinux-build
```

5. If the new hardware platform is completely different than previous one then it may be needed to update the device tree structure. Without any changes an error can occur during the build process.

After a hardware platform update a device tree structure is autogenerated in the ./components/plnx_workspace/device-tree/device-tree/ directory.
User modifications should be placed in ./project-spec/meta-user/recipes-bsp/device-tree/files/system-user.dtsi. Add required changes and rebuild the project.

## Test PetaLinux with QEMU <a name="test_petalinux"/>

Run QEMU with using files from pre-built directory.

Run the command:

```
petalinux-boot --qemu --prebuilt 3 --qemu-args "-m 8G" --dtb pre-built/linux/images/system-qemu.dtb
```

or with network support:

```
petalinux-boot --qemu --prebuilt 3 --qemu-args "-m 8G -net nic -net nic -net nic -net user -net nic" --dtb pre-built/linux/images/system-qemu.dtb
```

The command requires the following set of files:
- pmu_rom_qemu_sha3.elf
- pmufw.elf
- zynqmp-qemu-multiarch-pmu.dtb
- bl31.elf
- ramdisk.cpio.gz.u-boot
- u-boot.elf
- boot.scr
- system.dtb
- Image
- zynqmp-qemu-multiarch-arm.dtb
- rootfs.tar.gz (by default not included to Petalinux BSP; run petalinux-build to recreate the file and copy it from images/linux to pre-built/linux/images)
- petalinux-sdimage.wic (not included; requires rootfs.tar.gz to be regenerated)

Exit QEMU session with using CTRL+A and then press X.

### Notes <a name="test_petalinux_notes"/>

- Set up CONFIG_SUBSYSTEM_ROOTFS_EXT4 parameter
petalinux-config -> Image Packaging Configuration -> Root Filesystem Type -> EXT4

- Generate petalinux-sdimage.wic with using the command:
```
petalinux-package --wic
```

- Proper boot with root filesystem on second partition needs setting boot argument:
```
root=/dev/mmcblk0p2 in system-user.dtsi
```

- QEMU does not support PL RAM. Check if memory node in the device tree is as below:

```
memory {
	device_type = "memory";
	reg = <0x0 0x0 0x0 0x7ff00000 0x8 0x0 0x1 0x80000000>;
};
```

or use system-qemu.dtb (DTB for the base project).  

For user prepared DTB run the command:

```
petalinux-boot --qemu --kernel images/linux/Image --dtb images/linux/system.dtb --qemu-args "-m 8G -net nic -net nic -net user -net nic -net nic"
```
